syntax = "proto3";

// These wrappers can be useful in cases where a 
// protobuf message requires a field that can accept null values
import "google/protobuf/wrappers.proto";
// Enable the use of the Any type in protocol buffers messages.
import "google/protobuf/any.proto";

option csharp_namespace = "GrpcService";
package Message;

service Messaging {
  rpc GetFullMessage(ClientRequest) returns (ServerReply);
  rpc GetOptimizedMessage(ClientRequest) returns (ServerReply);
}

message FullMessage {
  repeated StructureDefinition header = 1; // Optional field
  repeated Row2 rows = 2; // Optional field
}

message OptimizedMessage {
  repeated StructureDefinition header = 1;  // Optional field
  string rows = 2; // Optional field
}
message Row2 {
	repeated google.protobuf.StringValue Values = 1;
}

message StructureDefinition {
  google.protobuf.StringValue name = 1; // Optional field
  google.protobuf.Int32Value type = 2; // Optional field
  bool is_list = 3; // Optional field
  bool is_nullable = 4; // Optional field
  google.protobuf.StringValue format = 5; // Optional field
  google.protobuf.Int32Value aggregation = 6; // Optional field
  google.protobuf.StringValue labels = 7; // Optional field
}

message ServerReply {
  string reply = 1;
}

message ClientRequest {
  bytes message = 1;
}